[package]
name = "geometry_dash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.9", features = ["dynamic"]}
bevy-inspector-egui = "0.17.0"
bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render" ] }
bevy_prototype_debug_lines = "0.9"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

